自定义view的自定义属性加上了前缀。DragListView加入了过渡动画

--- a/AndroidsDemo/res/layout/activity_maskimageview.xml
+++ b/AndroidsDemo/res/layout/activity_maskimageview.xml
@@ -16,9 +16,9 @@
                 android:layout_height="110dp"
                 android:scaleType="fitXY"
                 android:clickable="true"
-                app:mask_level="background"
-                app:is_ignore_alpha="false"
-                app:mask_color="#88000000"
+                app:miv_mask_level="background"
+                app:miv_is_ignore_alpha="false"
+                app:miv_mask_color="#88000000"
                 android:background="#dddd00"
                 android:src="@drawable/ic_launcher"/>
         <FrameLayout android:layout_width="wrap_content" android:layout_height="1dp"
@@ -28,9 +28,9 @@
                 android:layout_height="110dp"
                 android:scaleType="fitXY"
                 android:clickable="true"
-                app:mask_level="background"
-                app:is_ignore_alpha="false"
-                app:mask_color="#88ffffff"
+                app:miv_mask_level="background"
+                app:miv_is_ignore_alpha="false"
+                app:miv_mask_color="#88ffffff"
                 android:background="#000000"
                 android:src="@drawable/ic_launcher"/>
         <FrameLayout android:layout_width="wrap_content" android:layout_height="1dp"
@@ -40,9 +40,9 @@
                 android:layout_height="110dp"
                 android:scaleType="fitXY"
                 android:clickable="true"
-                app:mask_level="background"
-                app:is_ignore_alpha="true"
-                app:mask_color="#88000000"
+                app:miv_mask_level="background"
+                app:miv_is_ignore_alpha="true"
+                app:miv_mask_color="#88000000"
                 android:background="@drawable/bg2"
                 android:src="@drawable/ic_launcher"/>
     </LinearLayout>
@@ -57,9 +57,9 @@
                 android:scaleType="fitXY"
                 android:clickable="true"
                 android:background="@drawable/bg"
-                app:mask_level="foreground"
-                app:is_ignore_alpha="true"
-                app:mask_color="#880000ff"
+                app:miv_mask_level="foreground"
+                app:miv_is_ignore_alpha="true"
+                app:miv_mask_color="#880000ff"
                 android:src="@drawable/ic_launcher"/>
         <cn.forward.androids.views.MaskImageView
                 android:layout_marginLeft="5dp"
@@ -67,9 +67,9 @@
                 android:scaleType="fitXY"
                 android:clickable="true"
                 android:background="@drawable/bg"
-                app:mask_level="foreground"
-                app:is_ignore_alpha="false"
-                app:mask_color="#880000ff"
+                app:miv_mask_level="foreground"
+                app:miv_is_ignore_alpha="false"
+                app:miv_mask_color="#880000ff"
                 android:src="@drawable/ic_launcher"
                 />
         <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -93,9 +93,9 @@
                 android:scaleType="fitXY"
                 android:clickable="true"
                 android:background="@drawable/bg"
-                app:mask_level="background"
-                app:is_ignore_alpha="true"
-                app:mask_color="#880000ff"
+                app:miv_mask_level="background"
+                app:miv_is_ignore_alpha="true"
+                app:miv_mask_color="#880000ff"
                 android:src="@drawable/ic_launcher"/>
         <cn.forward.androids.views.MaskImageView
                 android:layout_marginLeft="5dp"
@@ -104,9 +104,9 @@
                 android:scaleType="fitXY"
                 android:clickable="true"
                 android:background="@drawable/bg"
-                app:mask_level="background"
-                app:is_ignore_alpha="false"
-                app:mask_color="#880000ff"
+                app:miv_mask_level="background"
+                app:miv_is_ignore_alpha="false"
+                app:miv_mask_color="#880000ff"
                 android:src="@drawable/ic_launcher"
                 />
         <TextView android:layout_width="match_parent"
