--- a/AndroidsDemo/res/layout/register_portrait_female_list.xml
+++ b/AndroidsDemo/res/layout/register_portrait_female_list.xml
@@ -25,7 +25,7 @@
             android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@drawable/socially_portrait_female"
-            app:height_to_width_ratio="1" />
+            app:riv_height_to_width_ratio="1" />
 
         <FrameLayout
             android:layout_width="@dimen/socially_register_portrait_padding"
@@ -38,7 +38,7 @@
             android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@drawable/socially_portrait_female"
-            app:height_to_width_ratio="1" />
+            app:riv_height_to_width_ratio="1" />
 
         <FrameLayout
             android:layout_width="@dimen/socially_register_portrait_padding"
@@ -51,7 +51,7 @@
             android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@drawable/socially_portrait_female"
-            app:height_to_width_ratio="1" />
+            app:riv_height_to_width_ratio="1" />
     </LinearLayout>
 
     <!-- row 2 -->
@@ -69,7 +69,7 @@
             android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@drawable/socially_portrait_female"
-            app:height_to_width_ratio="1" />
+            app:riv_height_to_width_ratio="1" />
 
         <FrameLayout
             android:layout_width="@dimen/socially_register_portrait_padding"
@@ -82,7 +82,7 @@
             android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@drawable/socially_portrait_female"
-            app:height_to_width_ratio="1" />
+            app:riv_height_to_width_ratio="1" />
 
         <FrameLayout
             android:layout_width="@dimen/socially_register_portrait_padding"
@@ -95,7 +95,7 @@
             android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@drawable/socially_portrait_female"
-            app:height_to_width_ratio="1" />
+            app:riv_height_to_width_ratio="1" />
     </LinearLayout>
 
     <!-- row 3 -->
@@ -113,7 +113,7 @@
             android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@drawable/socially_portrait_other"
-            app:height_to_width_ratio="1" />
+            app:riv_height_to_width_ratio="1" />
 
         <FrameLayout
             android:layout_width="@dimen/socially_register_portrait_padding"
@@ -126,7 +126,7 @@
             android:layout_weight="1"
             android:scaleType="fitXY"
             android:src="@drawable/socially_portrait_other"
-            app:height_to_width_ratio="1" />
+            app:riv_height_to_width_ratio="1" />
 
         <FrameLayout
             android:layout_width="@dimen/socially_register_portrait_padding"
@@ -138,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:src="@drawable/socially_portrait_other"
-            app:height_to_width_ratio="1" />
+            app:riv_height_to_width_ratio="1" />
     </LinearLayout>
 
 </LinearLayout>
