修改了原有BaseActivity的逻辑，新增InjectionLayoutInflater，用于渲染的view进行装饰

--- a/AndroidsDemo/res/layout/activity_other.xml
+++ b/AndroidsDemo/res/layout/activity_other.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.example.androidsdemo"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              tools:ignore="MissingPrefix">
 
     <cn.forward.androids.views.RoundProgressBar
         android:id="@+id/plugin_download_progress"
@@ -14,5 +16,30 @@
         app:rpb_background="#ff0000"
         app:rpb_background_width="2dp"
         app:rpb_color="#ffea5e"
-        app:rpb_width="8dp" />
+        app:rpb_width="8dp"/>
+
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="btn1"
+        app:injectListener="true"
+        />
+
+    <LinearLayout
+        android:id="@+id/other_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+
+        <Button
+            android:id="@+id/btn2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="btn2"
+            app:injectListener="true"
+            />
+    </LinearLayout>
+
 </LinearLayout>
