--- a/AndroidsLib/res/values/attrs.xml
+++ b/AndroidsLib/res/values/attrs.xml
@@ -2,75 +2,102 @@
 <resources>
 
     <declare-styleable name="View">
-        <attr name="injectListener" format="boolean" />
+        <attr name="injectListener" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="RatioImageView">
 
         <!-- 宽度是否根据src图片的比例来测量（高度已知） -->
-        <attr name="riv_is_width_fix_drawable_size_ratio" format="boolean" />
+        <attr name="riv_is_width_fix_drawable_size_ratio" format="boolean"/>
         <!-- 高度是否根据src图片的比例来测量（宽度已知） -->
-        <attr name="riv_is_height_fix_drawable_size_ratio" format="boolean" />
+        <attr name="riv_is_height_fix_drawable_size_ratio" format="boolean"/>
         <!--当mIsWidthFitDrawableSizeRatio生效时，最大宽度-->
-        <attr name="riv_max_width_when_width_fix_drawable" format="dimension" />
+        <attr name="riv_max_width_when_width_fix_drawable" format="dimension"/>
         <!--当mIsHeightFitDrawableSizeRatio生效时-->
-        <attr name="riv_max_height_when_height_fix_drawable" format="dimension" />
+        <attr name="riv_max_height_when_height_fix_drawable" format="dimension"/>
         <!-- 高度设置，参考宽度，如0.5 , 表示 高度＝宽度×０.5 -->
-        <attr name="riv_height_to_width_ratio" format="float" />
+        <attr name="riv_height_to_width_ratio" format="float"/>
         <!-- 宽度设置，参考高度，如0.5 , 表示 宽度＝高度×０.5 -->
-        <attr name="riv_width_to_height_ratio" format="float" />
+        <attr name="riv_width_to_height_ratio" format="float"/>
         <!--宽度和高度,避免layout_width/layout_height会在超过屏幕尺寸时特殊处理的情况-->
-        <attr name="riv_width" format="dimension" />
-        <attr name="riv_height" format="dimension" />
+        <attr name="riv_width" format="dimension"/>
+        <attr name="riv_height" format="dimension"/>
     </declare-styleable>
 
     <declare-styleable name="MaskImageView">
 
         <attr name="miv_mask_level" format="enum">
-            <enum name="background" value="1" />
-            <enum name="foreground" value="2" />
+            <enum name="background" value="1"/>
+            <enum name="foreground" value="2"/>
         </attr>
         <!-- 设置了setClickable(true)才生效,默认开启遮罩-->
-        <attr name="miv_is_show_mask_on_click" format="boolean" />
-        <attr name="miv_mask_color" format="color" />
+        <attr name="miv_is_show_mask_on_click" format="boolean"/>
+        <attr name="miv_mask_color" format="color"/>
         <!--是否忽略图片的透明度，默认为true,透明部分不显示遮罩 -->
-        <attr name="miv_is_ignore_alpha" format="boolean" />
+        <attr name="miv_is_ignore_alpha" format="boolean"/>
 
     </declare-styleable>
 
     <declare-styleable name="ShapeImageView">
         <attr name="siv_shape" format="enum">
-            <enum name="rect" value="1" />
-            <enum name="circle" value="2" />
-            <enum name="oval" value="3" />
+            <enum name="rect" value="1"/>
+            <enum name="circle" value="2"/>
+            <enum name="oval" value="3"/>
         </attr>
-        <attr name="siv_round_radius" format="dimension" />
-        <attr name="siv_border_size" format="dimension" />
-        <attr name="siv_border_color" format="color" />
+        <attr name="siv_round_radius" format="dimension"/>
+        <attr name="siv_border_size" format="dimension"/>
+        <attr name="siv_border_color" format="color"/>
     </declare-styleable>
 
     <declare-styleable name="ScrollPickerView">
-        <attr name="spv_min_text_size" format="dimension" />
-        <attr name="spv_max_text_size" format="dimension" />
-        <attr name="spv_start_color" format="color" />
-        <attr name="spv_end_color" format="color" />
+        <attr name="spv_min_text_size" format="dimension"/>
+        <attr name="spv_max_text_size" format="dimension"/>
+        <attr name="spv_start_color" format="color"/>
+        <attr name="spv_end_color" format="color"/>
         <attr name="spv_center_item_background" format="color"/>
-        <attr name="spv_visible_item_count" format="integer" />
+        <attr name="spv_visible_item_count" format="integer"/>
         <!-- 中间item的位置,默认为 mVisibleItemCount / 2-->
-        <attr name="spv_center_item_position" format="integer" />
+        <attr name="spv_center_item_position" format="integer"/>
         <!-- 是否循环滚动，默认为true，开启-->
-        <attr name="spv_is_circulation" format="boolean" />
+        <attr name="spv_is_circulation" format="boolean"/>
         <!-- 不允许父组件拦截触摸事件，设置为true为不允许拦截，此时该设置才生效 -->
-        <attr name="spv_disallow_intercept_touch" format="boolean" />
+        <attr name="spv_disallow_intercept_touch" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="RoundProgressBar">
-        <attr name="rpb_background" format="color" />
-        <attr name="rpb_background_width" format="dimension" />
-        <attr name="rpb_color" format="color" />
-        <attr name="rpb_width" format="dimension" />
-        <attr name="rpb_max_progress" format="float" />
-        <attr name="rpb_progress" format="float" />
+        <attr name="rpb_background" format="color"/>
+        <attr name="rpb_background_width" format="dimension"/>
+        <attr name="rpb_color" format="color"/>
+        <attr name="rpb_width" format="dimension"/>
+        <attr name="rpb_max_progress" format="float"/>
+        <attr name="rpb_progress" format="float"/>
+    </declare-styleable>
+
+    <!--字体颜色遮罩-->
+    <declare-styleable name="STextView">
+        <attr name="mtv_text_color_pressed" format="color"/>
+        <attr name="mtv_text_color_disable" format="color"/>
+    </declare-styleable>
+
+    <!-- 可以直接在布局文件中直接设置selector-->
+    <declare-styleable name="Selector">
+        <!--只有设置了mtv_background其他属性才生效-->
+        <attr name="sel_background" format="color"/>
+        <attr name="sel_background_shape" format="enum">
+            <enum name="rect" value="0"/>
+            <enum name="oval" value="1"/>
+            <enum name="line" value="2"/>
+            <enum name="ring" value="3"/>
+        </attr>
+        <attr name="sel_background_pressed" format="color"/>
+        <attr name="sel_background_border_pressed" format="color"/>
+        <attr name="sel_background_corners" format="dimension"/>
+        <attr name="sel_background_corner_topLeft" format="dimension"/>
+        <attr name="sel_background_corner_topRight" format="dimension"/>
+        <attr name="sel_background_corner_bottomLeft" format="dimension"/>
+        <attr name="sel_background_corner_bottomRight" format="dimension"/>
+        <attr name="sel_background_border_color" format="color"/>
+        <attr name="sel_background_border_width" format="dimension"/>
     </declare-styleable>
 
 </resources>
